<!--
  ~ Copyright (C) 2016 - present  Instructure, Inc.
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, version 3 of the License.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.instructure.speedgrader.activities.DocumentActivity">

    <item
        android:id="@id/edit_assignments"
        android:title="@string/editAssignment"
        app:showAsAction="never"/>

    <item
        android:id="@id/open_browser"
        android:title="@string/openInBrowser"
        app:showAsAction="never"/>

    <item
        android:id="@id/download"
        android:title="@string/download"
        app:showAsAction="never"/>
</menu>
