<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2016 - present  Instructure, Inc.
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, version 3 of the License.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~
  -->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- Dummy layout to draw focus -->
    <RelativeLayout
        android:id="@+id/editAssignmentWrapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true" />

        <EditText
            android:id="@+id/assignmenttitleET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="#000"
            android:layout_marginBottom="5dp"
            android:layout_alignParentTop="true"
            style="@style/SpeedGrader_Material"/>

        <LinearLayout
            android:id="@+id/pointsPossibleWrapper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/assignmenttitleET"
            android:orientation="horizontal">

            <com.instructure.speedgrader.views.HelveticaTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:gravity="left"
                android:textSize="14sp"
                android:minWidth="125dp"
                android:layout_gravity="center"
                android:text="@string/points" />

            <EditText
                android:id="@+id/pointsPossibleET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:imeOptions="actionDone" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/assignmentGroupsWrapper"
            android:layout_below="@+id/pointsPossibleWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <com.instructure.speedgrader.views.HelveticaTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:minWidth="125dp"
                android:gravity="left"
                android:textSize="14sp"
                android:layout_gravity="center"
                android:text="@string/assignmentGroup"
                android:layout_weight="1"/>

            <Spinner
                android:id="@+id/assignmentGroupSpinner"
                android:layout_gravity="left"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/submissionTypeWrapper"
            android:layout_below="@+id/assignmentGroupsWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="bottom">

            <com.instructure.speedgrader.views.HelveticaTextView
                android:id="@+id/submissionTypeLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:minWidth="125dp"
                android:textSize="14sp"
                android:gravity="left"
                android:layout_gravity="center"
                android:text="@string/submissionType"
                android:layout_weight="1"
                />

            <Spinner
                android:id="@+id/submissionTypeSelectedSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/gradingTypeWrapper"
            android:layout_below="@+id/submissionTypeWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="bottom">

            <com.instructure.speedgrader.views.HelveticaTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:minWidth="125dp"
                android:gravity="left"
                android:textSize="14sp"
                android:layout_gravity="center"
                android:text="@string/gradingType"
                android:layout_weight="1"/>

            <Spinner
                android:id="@+id/gradingTypeSpinner"
                android:layout_gravity="left"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dateTextViewWrapper"
            android:layout_below="@+id/gradingTypeWrapper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <com.instructure.speedgrader.views.HelveticaTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="125dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="@string/assignmentDue" />

            <com.instructure.speedgrader.views.DateTextView
                android:id="@+id/dueDateDT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#444"
                app:emptyDateText="@string/setDueDate"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/checkboxWrapper"
            android:layout_below="@+id/dateTextViewWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/useRubricForGrading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/useRubricForGrading"
                android:enabled="false"
                android:layout_marginBottom="5dp"/>

            <CheckBox
                android:id="@+id/notifyUsers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sendNotification"
                android:layout_marginBottom="5dp"/>

            <CheckBox
                android:id="@+id/mutedCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/muted"
                android:layout_marginBottom="5dp"/>
        </LinearLayout>


        <com.instructure.speedgrader.views.HelveticaTextView
            android:id="@+id/onlineEntries"
            android:layout_below="@+id/checkboxWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/onlineEntryOptions"
            android:textStyle="bold"
            android:layout_marginTop="8dp"/>
        <LinearLayout
            android:id="@+id/allOnlineSubmissionTypes"
            android:layout_below="@id/onlineEntries"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">
            <!-- Online submissions -->
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/editAssignmentProgress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingLeft="24dp"
        android:layout_centerInParent="true"
        android:visibility="gone">

        <com.instructure.speedgrader.views.CircularProgressBar
            android:id="@+id/circularProgressBar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"/>

        <com.instructure.speedgrader.views.HelveticaTextView
            android:id="@+id/progressTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="@color/lightGray"
            android:text="@string/savingIndeterminate"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textAllCaps="true"
            android:gravity="center"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/circularProgressBar"/>
    </RelativeLayout>
</RelativeLayout>
