<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2016 - present  Instructure, Inc.
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, version 3 of the License.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~
  -->

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/sg_background">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/card_square_bg">

            <Button
                android:id="@+id/urlButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:clickable="true"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_margin="16dp"
                android:text="@string/visitPage"/>

            <com.instructure.speedgrader.views.HelveticaTextView
                android:id="@+id/urlLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/url"
                android:textSize="20sp"
                android:paddingLeft="16dp"
                android:paddingBottom="16dp"/>

            <com.instructure.speedgrader.views.HelveticaTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/onlineURLDisclaimer"
                android:padding="16dp"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/loadingLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="?android:attr/listPreferredItemHeight"
            android:orientation="horizontal"
            android:visibility="gone">

            <com.instructure.speedgrader.views.CircularProgressBar
                android:id="@+id/progressBar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                />
            <com.instructure.speedgrader.views.HelveticaTextView
                android:id="@+id/loadingText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textColor="@color/lightGray"
                android:text="@string/loadingIndeterminate"
                android:layout_marginLeft="16dp"
                android:textAllCaps="true"
                android:layout_toRightOf="@id/progressBar"
                />
        </LinearLayout>

        <ImageView
            android:id="@+id/previewImage"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|center_horizontal"
            android:layout_gravity="top"
            android:paddingBottom="1dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:scaleType="fitCenter"
            android:contentDescription="@string/contentDescriptionPreviewImage"
            android:background="@drawable/card_square_bg"/>
    </LinearLayout>
</ScrollView>